# CLIDE

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.sh
src/: main.py  test.py
src/clide.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/clide/abstractConnector/: remoteCollector.py  remoteConnector.py  remoteDeployer.py
src/clide/abstractModel/: model.py  studentModel.py  teacherModel.py
src/clide/adapters/: dataset.py  preprocess.py  ultralytics.py
src/clide/callbacks/: callbackFactory.py  wandb.py
src/clide/concreteModel/: teacherPool.py
src/clide/distiller/: importanceDistiller.py
src/clide/managers/: dataManager.py  featureDistillationManager.py  hookManager.py
src/clide/quantizer/: mctQuantizer.py
src/clide/trainer/: distillationTrainer.py  loss.py
src/clide/validator/: distillationValidator.py
src/conf/: config.yaml
src/conf/collector/: cgi_view1.yaml  cgi_view2.yaml  local.yaml  local_recursive.yaml  m3u8.yaml  rtsp.yaml
src/conf/datamanager/: mongolocal.yaml  mongolocaldebug.yaml
src/conf/deployer/: dummy.yaml  scp.yaml  scp_server.yaml
src/conf/logger/: wandb.yaml
src/conf/quantizer/: mct.yaml
src/conf/student/: yolo8n.yaml
src/conf/teachers/: default.yaml  yolos.yaml
src/conf/trainer/: ultralytics.yaml  ultralyticsConfidence.yaml  ultralyticsFeatures.yaml  ultralyticsFeaturesWeak.yaml  ultralyticsPlain.yaml  ultralyticsWeak.yaml
src/feda.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/feda/abstractConnector/: remoteCollector.py  remoteDeployer.py
src/feda/abstractModel/: model.py  studentModel.py  teacherModel.py
src/feda/abstractModels/: model.py  studentModel.py  teacherModel.py
src/feda/adapters/: classes.py  dataset.py  yolov8MCT.py
src/feda/concreteModel/: teacherPool.py
src/feda/concreteModels/: florence2.py
src/feda/distillation/: distillationTrainer.py
(+26 files in other folders)
