[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "feda"
authors = [
    {name = "Daniele Affinita", email = "daniele.affinita@sony.com"}
]
description = "Foundation Edge Distillation Architecture"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "torch",
    "numpy"
]